<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_text">寶島好智遊</string>
    <string name="home_text">首頁</string>
    <string name="member_text">會員</string>
    <string name="order_text">訂購紀錄</string>
    <string name="more_text">更多</string>
    <string name="buyList_text">伴手禮列表</string>
    <string name="buyClick_text">人氣：</string>
    <string name="buy_text">直接購買</string>
    <string name="shoplist_text">購物清單</string>
    <string name="gopay_text">前往付款</string>
    <string name="addressee_textColon">收件人：</string>
    <string name="addressee_text">收件人</string>
    <string name="addresseeInput_text">請輸入收件人姓名</string>
    <string name="tel_textColon">電話：</string>
    <string name="tel_text">電話</string>
    <string name="telInput_text">請輸入電話</string>
    <string name="email_textColon">電子郵件：</string>
    <string name="email_text">電子郵件</string>
    <string name="emailInput_text">請輸入電子郵件</string>
    <string name="place_textColon">收貨地點：</string>
    <string name="placeInput_text">請輸入收貨地點</string>
    <string name="memo_textColon">備註事項：</string>
    <string name="memo_text">備註事項</string>
    <string name="memoInput_text">請輸入備註事項</string>
    <string name="orderDetail_textColon">訂單明細：</string>
    <string name="orderDetail">訂單明細</string>
    <string name="totalCount_textColon">總金額：</string>
    <string name="totalCount_text">總金額</string>
    <string name="payOk_text">確認付款</string>
    <string name="checkschedule_text">行程查詢</string>
    <string name="planschedule_text">規劃行程</string>
    <string name="wrongData_text">資料錯誤</string>
    <string name="payed_text">已付款</string>
    <string name="ok_text">確定</string>
    <string name="cancel_text">取消</string>
    <string name="count_text">小計</string>
    <string name="memonycount_text">價格小計</string>
    <string name="regMessage_text">請輸入註冊訊息</string>
    <string name="account_text">帳號</string>
    <string name="accountInput_text">請輸入帳號</string>
    <string name="password_text">密碼</string>
    <string name="passwordInput_text">請輸入密碼</string>
    <string name="name_text">姓名</string>
    <string name="name_textColon">姓名</string>
    <string name="nameInput_text">請輸入姓名</string>
    <string name="accountemailInput_text">請輸入帳號及電子郵件</string>
    <string name="startRecord_text">開始記錄</string>
    <string name="stopRecord_text">停止記錄</string>
    <string name="recordSpot_text">記錄景點</string>
    <string name="login_text">登入</string>
    <string name="reg_text">註冊</string>
    <string name="forgetpassword_text">忘記密碼了嗎</string>
    <string name="spot_text">景點資訊</string>
    <string name="goods_text">伴手禮選購</string>
    <string name="record_text">旅程紀錄</string>
    <string name="service_text">即時服務</string>
    <string name="special_text">即時好康</string>
    <string name="news_text">最新消息</string>
    <string name="share_text">分享</string>
    <string name="value_text">給評價</string>
    <string name="logout_text">登出</string>
    <string name="Arecord_text">日誌單筆</string>
    <string name="recordupload_text">是否要記錄景點心得或上傳照片？</string>
    <string name="recordtitle_text">旅程標題</string>
    <string name="recordmemo_text">景點心得</string>
    <string name="recordremind_text">請先開始記錄，才可上傳景點心得</string>
    <string name="serviceLine_text">客服專線</string>
    <string name="serviceLineTitle_text">飛行家服務專線</string>
    <string name="serviceTime_text">服務時間：10–21</string>
    <string name="message_text">線上訊息</string>
    <string name="send_text">送    出</string>
    <string name="buyfrom_text">購買於</string>
    <string name="orderNo_text">訂單號碼</string>
    <string name="orderPayment_text">付款方式</string>
    <string name="orderState_text">交易狀態</string>
    <string name="deliverMethod_text">運送方式</string>
    <string name="deliverCount_text">運費</string>
    <string name="price_text">價格 :</string>
    <string name="spotDetail_text">景點詳細資訊</string>
    <string name="spotLoading_text">景點資料龐大，載入中…</string>
    <string name="spotMarkerLoading_text">景點Marker載入中…</string>
    <string name="recordTitleInput_text">請輸入這趟旅程的標題</string>
    <string name="emptyInput_text">未輸入任何文字！</string>
    <string name="uploaded_text">心得已上傳！</string>
    <string name="uploadedPic_text">圖片已上傳！</string>
    <string name="camera_text">相機</string>
    <string name="album_text">相簿</string>
    <string name="uploadPhoto_text">上傳照片</string>
    <string name="chooseFile_text">選擇檔案</string>
    <string name="noUpload_text">未新增任何日誌</string>
    <string name="noUploadmemo_text">未上傳景點心得。</string>
    <string name="requestLocation_text">請允許寶島好智遊存取您的位置!</string>
    <string name="systemMessage_text">系統提示</string>
    <string name="LoginFirst_text">請先登入</string>
    <string name="LeaveMessage_text">確定要離開嗎</string>
    <string name="InputSpotName_text">請輸入景點名稱</string>
    <string name="loading_text">載入中…</string>
    <string name="handling_text">處理中…</string>
    <string name="nofile_text">尚無資料!</string>
    <string name="logoutLeave_text">登出後會自動離開</string>
    <string name="shareto_text">分享至</string>
    <string name="aboutUs_text">關於我們</string>
    <string name="track_text">旅遊軌跡</string>
    <string name="trackmemo_text">旅遊日誌</string>
    <string name="spotMap_text">景點地圖</string>
    <string name="spotList_text">景點列表</string>
    <string name="notsend_text">訊息尚未送出</string>
    <string name="sending_text">傳送中......</string>
    <string name="connecterror_text">與伺服器連線錯誤!</string>
    <string name="reply_text">===系統回覆====</string>
    <string name="noaccountAndpassword_text">未輸入帳號或密碼</string>
    <string name="InputData_text">請輸入資料</string>
    <string name="regReply_text">註冊訊息:</string>
    <string name="errorReply_text">錯誤訊息:</string>
    <string name="logining_text">登入中…</string>
    <string name="nonet_text">請連接網路！</string>
    <string name="loginok_text">登入成功！</string>
    <string name="Empty_text">無</string>
    <string name="OpenTime_text">1. 開放時間：</string>
    <string name="Address_text">2. 地址：</string>
    <string name="TicketInfo_text">門票資訊：</string>
    <string name="loginFirst_text">請先登入</string>
    <string name="a_text">個</string>
    <string name="sendingOk_text">送出成功</string>
    <string name="sendingError_text">傳送失敗!</string>
    <string name="gotoPay_text">即將跳轉至付款畫面</string>
    <string name="Pay_text">付款頁面</string>
    <string name="app_name">寶島好智遊</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_play_service_missing">裝置沒有安裝Google Play服務</string>
    <string name="title_activity_check_schedule_activity_new">CheckScheduleActivityNew</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="navi_text">導  航</string>
</resources>