<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/regMessage_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_text"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_account"
                android:hint="@string/accountInput_text"
                android:textSize="16dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password"
                android:hint="@string/passwordInput_text"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_name"
                android:hint="@string/nameInput_text"
                android:textSize="16dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_text"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_phone"
                android:hint="@string/telInput_text"
                android:textSize="16dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="16dp"
                android:textColor="@color/blue"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_email"
                android:hint="@string/emailInput_text"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/white"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_text"
                android:id="@+id/reg_ok"
                android:layout_marginRight="10dp"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:id="@+id/reg_cancel"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>