<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountemailInput_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_text"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:background="@drawable/border_rec_blue"
                android:padding="4dp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/findpwd_accountEdit"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:hint="@string/accountInput_text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:singleLine="false"
                android:padding="4dp"
                android:background="@drawable/border_rec_blue" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/findpwd_emailEdit"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:hint="@string/passwordInput_text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_text"
                android:id="@+id/findpwd_OkButt"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:id="@+id/findpwd_CancelButt"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                android:background="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>