<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.LoginActivity"
    android:background="@drawable/login_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword_text"
        android:id="@+id/home_forgetpa_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:textColor="@color/peach"
        android:textSize="14dp"
        android:clickable="true"
        android:autoText="false"
        android:background="@drawable/click_effect_general" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_forgetpa_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:id="@+id/home_login_text"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:background="@drawable/click_effect_general" />
        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_text"
            android:id="@+id/home_sighup_text"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:background="@drawable/click_effect_general" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/password_text"
        android:id="@+id/home_pass_text"
        android:layout_above="@+id/linearLayout"
        android:layout_marginBottom="25dp"
        android:background="#FF0000"
        android:textColor="#FFFFFF"
        android:padding="9dp"
        android:textSize="16dp"
        android:layout_marginLeft="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/home_pass_edit"
        android:layout_alignTop="@+id/home_pass_text"
        android:layout_toRightOf="@+id/home_pass_text"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@drawable/border_rec_red"
        android:hint="@string/passwordInput_text"
        android:singleLine="true"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/account_text"
        android:id="@+id/home_account_text"
        android:layout_above="@+id/home_pass_text"
        android:layout_marginBottom="27dp"
        android:textColor="#FFFFFF"
        android:background="@color/blue"
        android:padding="9dp"
        android:textSize="16dp"
        android:layout_marginLeft="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/home_account_edit"
        android:layout_alignTop="@+id/home_account_text"
        android:layout_toRightOf="@+id/home_account_text"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_rec_blue"
        android:padding="10dp"
        android:hint="@string/accountInput_text"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:textColor="#000000"
        android:textSize="30dp" />

</RelativeLayout>
