<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_buyitem_layout"
                android:layout_margin="3dp">

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_text"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="＄"
                    android:textColor="@color/peach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_buyitem_totalPrice"
                    android:gravity="center"
                    android:layout_marginRight="25dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_text"
                    android:id="@+id/dialog_buyitem_OkButton"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text"
                    android:id="@+id/dialog_buyitem_CancelButton"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:background="@color/blue"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>