<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_home_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_home_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/tab_selected_home" />

            <TextView
                android:id="@+id/main_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_text"
                android:textColor="#0044BB"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_member_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/click_effect_general"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_member_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/member_img_click" />

            <TextView
                android:id="@+id/main_member_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/member_text"
                android:textColor="@color/gray"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_shoprecord_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/click_effect_general"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_shoprecord_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/record_img_click" />

            <TextView
                android:id="@+id/main_shoprecord_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_text"
                android:textColor="@color/gray"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_more_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/click_effect_general"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_more_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/more_img_click" />

            <TextView
                android:id="@+id/main_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more_text"
                android:textColor="@color/gray"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>